# RandomEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/engine/: engine.h
engine/include/engine/timer/: timer.h
engine/include/engine/window_system/: input.h  window.h  window_system.h
engine/source/: core.h  engine.cpp  pch.h
engine/source/engine/: engine.cpp
engine/source/engine/core/camera/: camera_manager.cpp  camera_manager.h  camera_manager.hpp
engine/source/engine/core/event_system/: event_dispatcher.cpp  event_dispatcher.h  event_dispatcher.hpp
engine/source/engine/core/window_system/: window_system.cpp  window_system_events.h
engine/source/engine/event_system/: event_dispatcher.cpp  event_dispatcher.h  event_dispatcher.hpp
engine/source/engine/render/mem_manager/: buffer_manager.cpp  buffer_manager.h
engine/source/engine/render/mesh_manager/: mesh_manager.cpp  mesh_manager.h
engine/source/engine/render/pipeline_manager/: pipeline_mng.cpp  pipeline_mng.h
engine/source/engine/render/platform/OpenGL/: opengl_driver.cpp  opengl_driver.h
engine/source/engine/render/render_system/: render_system.cpp  render_system.h
engine/source/engine/render/rt_manager/: rt_manager.cpp  rt_manager.h
engine/source/engine/render/shader_manager/: resource_bind.h  shader_mng.cpp  shader_mng.h
engine/source/engine/render/texture_manager/: texture_mng.cpp  texture_mng.h
engine/source/engine/utils/data_structures/: base_id.h  base_id.hpp  strid.h  strid.hpp
engine/source/engine/utils/debug/: assertion.cpp  assertion.h  eng_log_sys.cpp  eng_log_sys.h
engine/source/engine/utils/log_system/: log_system.cpp  log_system.h  log_system.hpp
engine/source/engine/utils/math/: common_math.h  glm_math.h
engine/source/engine/window_system/: input.cpp  window.cpp  window_system.cpp
engine/source/shaders/base/: base.fs  base.vs
engine/source/shaders/include/: common_math.fx  reflection.fx  registers_common.fx  resource_constants.fx  system.fx  texture_constants.fx  texture_incl.fx
engine/source/shaders/source/base/: base.fs  base.vs
engine/source/utils/data_structures/: base_id.h  strid.h  strid.hpp
engine/source/utils/debug/: logger.cpp  logger.h
engine/source/utils/file/: file.cpp
engine/source/utils/timer/: timer.cpp
engine/source/window_system/: input.cpp  window.cpp
engine/tools/shadergen/: CMakeLists.txt
engine/tools/shadergen/source/: main.cpp  shadergen.cpp  shadergen.h  shadergen_main.cpp
engine/tools/shadergen/source/logging/: log.cpp  log.h
engine/tools/shadergen/source/shadergen/: shadergen.cpp  shadergen.h
game/source/: main.cpp  pch.h
game/source/application/: application.cpp  application.h
